added images and thumbnails

--- a/animals.html
+++ b/animals.html
@@ -35,7 +35,25 @@
         <div class="col-md">Komodo Dragon</div>
     </div>
 </div>
-<p>Animals row breaks or shrinks first because col-md has a 768px size and it breaks after that as mentioned in the ppt modules</p>
+<p>Animals row breaks or shrinks first because col-md has a 768px size and it breaks after that as mentioned in the ppt modules`</p>
+<div class="container">
+  <img src="Jaguar.jpg" class="img-fluid" style="height: 250px;width: 350px;" alt="Jaguar">
+  <img src="AntEater.jpg" class="img-fluid" alt="AntEater" style="height: 250px;width: 350px;">
+  <img src="Monkey.jpg" class="img-fluid" alt="Monkey" style="height: 250px;width: 350px;">
+</div>
 
+<div id="thumbnailImage" class="container">
+  <a target="_blank" href="Jaguar.jpg">
+    <img src="Jaguar.jpg" class="img-thumbnail" style="height: 250px;width: 350px;" alt="Jaguar">
+  </a>
+
+  <a target="_blank" href="AntEater.jpg">
+    <img src="AntEater.jpg" class="img-thumbnail" style="height: 250px;width: 350px;" alt="AntEater">
+  </a>
+
+  <a target="_blank" href="Monkey.jpg">
+    <img src="Monkey.jpg" class="img-thumbnail" style="height: 250px;width: 350px;" alt="Monkey">
+  </a>
+</div><br><br>
 </body>
 </html>
