--- a/animals.html
+++ b/animals.html
@@ -55,5 +55,65 @@
     <img src="Monkey.jpg" class="img-thumbnail" style="height: 250px;width: 350px;" alt="Monkey">
   </a>
 </div><br><br>
+
+<div class="table-responsive">
+  <table class="table table-striped table-bordered table-hover table-sm table-info" style="width: 80%;">
+    <caption style="color: black; font-size: large;"><b>Letter, Animal, City and Car Table</b></caption>
+    <thead class="table-dark">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Letter</th>
+        <th scope="col">Animal</th>
+        <th scope="col">City</th>
+        <th scope="col">Car</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>J</td>
+        <td>Jaguar</td>
+        <td>Jerusalem</td>
+        <td>Jaguar</td>
+      </tr>
+      <tr class="table-success">
+        <th scope="row">2</th>
+        <td>A</td>
+        <td>Ant Eater</td>
+        <td>Atlanta</td>
+        <td>Aston Martin</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>M</td>
+        <td>Monkey</td>
+        <td>Maryvillek</td>
+        <td>Mercedes</td>
+      </tr>
+      <tr class="table-success">
+        <th scope="row">4</th>
+        <td>I</td>
+        <td>Indian Elephant</td>
+        <td>Illionois</td>
+        <td>Imperial</td>
+      </tr>
+      <tr>
+        <th scope="row">5</th>
+        <td>A</td>
+        <td>Alligator</td>
+        <td>Austin</td>
+        <td>Accord</td>
+      </tr>
+      <tr class="table-success">
+        <th scope="row">6</th>
+        <td>K</td>
+        <td>Komodo Dragon</td>
+        <td>Kansas city</td>
+        <td>Kia</td>
+      </tr>
+      
+    </tbody>
+  </table>
+  </div>
 </body>
 </html>
