--- a/animals.html
+++ b/animals.html
@@ -14,6 +14,24 @@
 
 </head>
 <body>
+<nav class="navbar navbar-expand-md navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="animals.html">Interesting Animals</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarScroll">
+        <ul class="navbar-nav me-auto" style="--bs-scroll-height: 100px;">
+          <li class="nav-item">
+            <a class="nav-link active" href="plane.html">Plane</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="train.html">Train</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+</nav>
 <h2>Animals by Akhil Sai Kumar Jami</h2>
 <p>jamiak</p>
 <div class="container">
@@ -115,5 +133,65 @@
     </tbody>
   </table>
   </div>
+  <button type="button" class="btn btn-outline-primary">V</button>
+      <button type="button" class="btn btn-outline-primary">A</button>
+      <button type="button" class="btn btn-outline-primary">N</button>
+      <button type="button" class="btn btn-outline-primary">K</button>
+      <button type="button" class="btn btn-outline-primary">I</button>
+      <button type="button" class="btn btn-outline-primary">R</button>
+      
+      <div class="btn-toolbar" role="toolbar" aria-label="Buttons in Tool Bar">
+          <div class="btn-group" role="group" aria-label="First group">
+            <button type="button" class="btn btn-success ">J</button>
+            <button type="button" class="btn btn-success">A</button>
+            <button type="button" class="btn btn-success">M</button>
+          </div>
+
+          <div class="btn-group" role="group" aria-label="Third group">
+            <button type="button" class="btn btn-warning">I</button>
+            <button type="button" class="btn btn-warning">A</button>
+          </div>
+
+          <div class="btn-group" role="group" aria-label="Second group">
+            <button type="button" class="btn btn-danger">K</button>
+          </div>
+
+      </div><br>
+    
+
+      <div class="dropdown">
+        <button class="dropdown-toggle btn btn-secondary" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          Select for the reference Page
+        </button>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="plane.html">View Plane Page</a>
+          <a class="dropdown-item" href="train.html">View train Page</a>
+        </div>
+
+      </div><br>
+      <form>
+        <div class="form-group mb-3">
+          <label for="emailControlInput" class="form-label"><b>Email address</b></label>
+          <input type="email" class="form-control" id="emailControlInput" placeholder="name@example.com">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+
+        <div class="form-group mb-3">
+          <label for="animalControlInput" class="form-label"><b>Animal</b></label>
+          <input type="text" class="form-control" id="animalControlInput" placeholder="Enter your animal">
+        </div>
+
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault">
+            Sign up for newsletter?
+          </label>
+        </div><br>
+
+        <div>
+          <button type="submit" class="btn btn-primary mb-3">Submit</button>
+        </div>
+
+      </form>
 </body>
 </html>
