--- a/animals.html
+++ b/animals.html
@@ -193,5 +193,32 @@
         </div>
 
       </form>
+      <div class="card-group">
+        <div class="card">
+          <img class="card-img-top" src="Jaguar.jpg" alt="Jaguar" >
+          <div class="card-body">
+            <h5 class="card-title">Jaguar</h5>
+            <p class="card-text">Jaguars are the largest of South America's big cats and the third largest cats in the world. Their fur is usually tan or orange with black spots, called "rosettes" because they are shaped like roses. Some jaguars are so dark they don't seem to have spots.</p>
+            <button type="button" class="btn btn-link" onclick="location.href='https://kids.nationalgeographic.com/animals/mammals/facts/jaguar'">Source</button>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="AntEater.jpg" alt="AntEater">
+          <div class="card-body">
+            <h5 class="card-title">AntEater</h5>
+            <p class="card-text"></p>anteater, (suborder Vermilingua), any of four species of toothless, insect-eating mammals found in tropical savannas and forests from southern Mexico to Paraguay and northern Argentina. They are long-tailed animals with elongated skulls and tubular muzzles.</p>
+            <button type="button" class="btn btn-link" onclick="location.href='https://www.britannica.com/animal/anteater'">Source</button>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" style="height: 280px;" src="Monkey.jpg" alt="Monkey">
+          <div class="card-body">
+            <h5 class="card-title">Monkey</h5>
+            <p class="card-text">Monkeys are found in two main regions of the world, so scientists have grouped them as either Old World monkeys or New World monkeys. Old World monkeys are found in Africa and Asia. Some examples are guenons, mangabeys, macaques, baboons, and colobus monkeys. New World monkeys are found in Mexico, Central America, and South America.</p>
+            <button type="button" class="btn btn-link" onclick="location.href='https://animals.sandiegozoo.org/animals/monkey';">Source</button>
+          </div>
+        </div>
+      
+      </div>
 </body>
 </html>
